force-app/main/default/objects/Dealer_Master__c/Dealer_Master__c.object-meta.xml
<CustomObject>
    <label>Dealer Master</label>
    <nameField>
        <label>Dealer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>