force-app/main/default/objects/Dealer_Master__c/fields/Contact_Person_Dealer_GM__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Dealer_GM__c</fullName>
    <label>Contact Person / Dealer GM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>