force-app/main/default/objects/Dealer_Master__c/fields/Dealer_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Bank_Account_Number__c</fullName>
    <label>Dealer Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>