force-app/main/default/objects/Dealer_Master__c/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <label>Dealer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>