force-app/main/default/objects/Dealer_Master__c/fields/Dealer_PAN__c.field-meta.xml
<CustomField>
    <fullName>Dealer_PAN__c</fullName>
    <label>Dealer PAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>