force-app/main/default/objects/Dealer_Master__c/fields/Dealer_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Telephone_Number__c</fullName>
    <label>Dealer Telephone Number</label>
    <type>Phone</type>
</CustomField>